[gd_scene load_steps=2 format=3 uid="uid://be65ve2f56wx0"]

[ext_resource type="Script" uid="uid://difjyjcxhpnkr" path="res://Scripts/dialogue.gd" id="1_5rqxr"]

[node name="Dialogue" type="CanvasLayer"]
script = ExtResource("1_5rqxr")

[node name="Background" type="Panel" parent="."]
anchors_preset = -1
anchor_right = 1.002
anchor_bottom = 0.989
offset_right = -0.304077
offset_bottom = 0.127991

[node name="PortraitLeft" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 67.0
offset_top = 328.0
offset_right = -1046.0
offset_bottom = -275.0

[node name="PortraitRight" type="TextureRect" parent="Background"]
layout_mode = 0
offset_left = 988.0
offset_top = 188.0
offset_right = 1028.0
offset_bottom = 228.0

[node name="NameLabelLeft" type="Label" parent="Background"]
layout_mode = 0
offset_left = 950.0
offset_top = 399.0
offset_right = 994.0
offset_bottom = 422.0

[node name="NameLabelRight" type="Label" parent="Background"]
offset_left = 93.0
offset_top = 384.0
offset_right = 133.0
offset_bottom = 407.0

[node name="TextBox" type="RichTextLabel" parent="Background"]
layout_mode = 0
offset_left = 311.0
offset_top = 547.0
offset_right = 861.0
offset_bottom = 623.0
